fixing z-index

--- a/apps/ex_marketer_web/assets/css/layouts/_app.scss
+++ b/apps/ex_marketer_web/assets/css/layouts/_app.scss
@@ -2,7 +2,7 @@
   .main-actionable {
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 1;
     background-color: rgb(248, 247, 202);
     padding: 1rem;
   }
